--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  check_success:
+  explicit_api_key_auth:
     runs-on: windows-latest
     name: Check for success
     steps:
@@ -19,7 +19,7 @@ jobs:
         uses: ./
         with:
           akeyless-secret-path: '/DevTools/live-azure-ad'
-          akeyless-access-id: '${{ secrets.AKEYLESS_ACCESS_ID }}'
+          akeyless-access-id: 'p-m9vvgiii6rip'
           akeyless-access-key: '${{ secrets.AKEYLESS_ACCESS_KEY }}'
 
       - name: Verify Output
@@ -31,4 +31,31 @@ jobs:
           echo "${{ steps.aad-secret.outputs.key-id }}"
           echo "${{ steps.aad-secret.outputs.display-name }}"
 
-          
+  implicit_github_jwt_auth:
+    runs-on: windows-latest
+    name: Check for success
+
+    # This authenticates you with akeyless automatically
+    permissions:
+      id-token: write
+      contents: read
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Get AAD Secret
+        id: aad-secret
+        uses: ./
+        with:
+          akeyless-secret-path: '/DevTools/live-azure-ad'
+          akeyless-access-id: 'p-149l6gayzx05'
+
+      - name: Verify Output
+        shell: pwsh
+        run: |
+          echo "${{ steps.aad-secret.outputs.app-id }}"
+          echo "${{ steps.aad-secret.outputs.tenant-id }}"
+          echo "${{ steps.aad-secret.outputs.secret-text }}"
+          echo "${{ steps.aad-secret.outputs.key-id }}"
+          echo "${{ steps.aad-secret.outputs.display-name }}"
