--- a/action.yml
+++ b/action.yml
@@ -104,6 +104,7 @@ runs:
             exit 1
         }
         
+        Write-Output $AuthBody
         
         $AuthParameters = @{
           Method = "POST"
