--- a/action.yml
+++ b/action.yml
@@ -87,7 +87,7 @@ runs:
           $AuthBody = @{
           "access-id" = "$akeylessAccessId"
           "access-type" = "jwt"
-          jwt = ${{ secrets.GITHUB_TOKEN }}
+          jwt = ${{ env.GITHUB_TOKEN }}
          }
 
          # ${{ secrets.GITHUB_TOKEN }} or $githubJwtToken
