--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,19 +44,22 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Get AAD Secret
-        id: aad-secret
-        uses: ./
-        with:
-          akeyless-secret-path: '/DevTools/live-azure-ad'
-          akeyless-access-id: 'p-149l6gayzx05'
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - run: |
+          echo ${{ secrets.GITHUB_TOKEN }}
+        
+      # - name: Get AAD Secret
+      #   id: aad-secret
+      #   uses: ./
+      #   with:
+      #     akeyless-secret-path: '/DevTools/live-azure-ad'
+      #     akeyless-access-id: 'p-149l6gayzx05'
+      #     repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Verify Output
-        shell: pwsh
-        run: |
-          echo "${{ steps.aad-secret.outputs.app-id }}"
-          echo "${{ steps.aad-secret.outputs.tenant-id }}"
-          echo "${{ steps.aad-secret.outputs.secret-text }}"
-          echo "${{ steps.aad-secret.outputs.key-id }}"
-          echo "${{ steps.aad-secret.outputs.display-name }}"
+      # - name: Verify Output
+      #   shell: pwsh
+      #   run: |
+      #     echo "${{ steps.aad-secret.outputs.app-id }}"
+      #     echo "${{ steps.aad-secret.outputs.tenant-id }}"
+      #     echo "${{ steps.aad-secret.outputs.secret-text }}"
+      #     echo "${{ steps.aad-secret.outputs.key-id }}"
+      #     echo "${{ steps.aad-secret.outputs.display-name }}"
